[gd_scene load_steps=2 format=3 uid="uid://8n3gpu1kl4xo"]

[ext_resource type="Script" path="res://main.gd" id="1_fsq7a"]

[node name="Main" type="Node2D"]
script = ExtResource("1_fsq7a")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Info_Group" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -244.0
offset_top = 182.0
offset_right = -204.0
offset_bottom = 222.0

[node name="AttemptsLabel" type="Label" parent="Info_Group"]
offset_left = -314.0
offset_top = -492.0
offset_right = -274.0
offset_bottom = -469.0
metadata/_edit_use_anchors_ = true

[node name="MessageLabel" type="Label" parent="Info_Group"]
offset_left = -311.0
offset_top = -425.0
offset_right = -271.0
offset_bottom = -402.0
metadata/_edit_use_anchors_ = true

[node name="Grid" type="VBoxContainer" parent="Info_Group"]
offset_left = 184.0
offset_top = -242.0
offset_right = 224.0
offset_bottom = -202.0
scale = Vector2(3, 3)
metadata/_edit_use_anchors_ = true

[node name="Input_Group" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GuessInput" type="LineEdit" parent="Input_Group"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.575
anchor_top = -0.55
anchor_right = 7.12344
anchor_bottom = 1.75
offset_left = -101.0
offset_top = 204.0
offset_right = -33.9375
offset_bottom = 235.0
metadata/_edit_use_anchors_ = true

[node name="GuessButton" type="Button" parent="Input_Group"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.75
anchor_top = -0.075
anchor_right = 3.025
anchor_bottom = 1.325
offset_left = 379.0
offset_top = -189.0
offset_right = 434.0
offset_bottom = -158.0
text = "Guess"
metadata/_edit_use_anchors_ = true

[node name="NewGameButton" type="Button" parent="Input_Group"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.5
anchor_right = 4.375
anchor_bottom = 1.65
offset_left = 288.0
offset_top = -306.0
offset_right = 378.0
offset_bottom = -275.0
text = "New game"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Input_Group/GuessButton" to="." method="_on_guess_button_pressed"]
[connection signal="pressed" from="Input_Group/NewGameButton" to="." method="_on_new_game_button_pressed"]
